--- a/Lesson140218/css/product-style.css
+++ b/Lesson140218/css/product-style.css
@@ -1,72 +1,225 @@
-html {
-  font-family: 'Reem+Kufi', italic;
+body {
+    font-family: 'Reem+Kufi', italic;
+}
+
+.logo {
+    display: inline-block;
+    float: left;
+}
+
+.logo img {
+    padding: 15px 10px;
+    width: 110px;
+}
+
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.blocks-menus {
+    background: white;
+    padding: 20px 10px;
+    text-align: center;
+}
+
+.blocks-menus .primary-menus {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+
+.blocks-menus .primary-menus i {
+    padding: 0 10px;
+}
+
+.blocks-menus .primary-menus li {
+    list-style: none;
+    float: left;
+    padding: 0 10px;
+}
+
+.blocks-menus .primary-menus li a {
+    text-decoration: none;
+    font-family: 'Poiret One', italic;
+    text-transform: uppercase;
+    font-weight: normal;
+    color: #303030;
+    font-size: 19px;
+    font-weight: 900;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+}
+
+.blocks-menus .primary-menus li a:hover {
+    color: #D4B062;
+}
+
+.blocks-menus .menus-dropdown:hover .dropdown {
+    visibility: visible;
+    opacity: 1;
+}
+
+.blocks-menus .dropdown {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    border: 1px solid #ECECEC;
+    padding: 10px 30px;
+    z-index: 999;
+    background: white;
+    width: 100%;
+    margin-top: 10px;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+}
+
+.blocks-menus .dropdown li {
+    line-height: 30px;
+    float: none;
+}
+
+.blocks-menus .dropdown a {
+    font-size: 11px;
+    font-weight: normal;
+}
+
+.blocks-menus .menus-dropdown {
+    position: relative;
+}
+
+.blocks-menus .menus-megamenus:hover .mega-menus {
+    opacity: 1;
+    visibility: visible;
+}
+
+.blocks-menus .mega-menus {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 15px auto;
+    width: 80%;
+    border: 1px solid #ECECEC;
+    padding: 0 15px;
+    min-height: 400px;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    background-image: url('https://images.pexels.com/photos/397998/pexels-photo-397998.jpeg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+
+.blocks-menus .mega-menus li {
+    float: none;
+    text-align: left;
+    padding: 0;
+}
+
+.blocks-menus .section {
+    float: left;
+    margin: 35px 15px;
+}
+
+.blocks-menus .section h3 {
+    font-family: 'Poiret One', italic;
+    position: relative;
+    font-size: 26px;
+    color: #D7CCC8;
+    padding: 10px 0;
+    text-transform: inherit;
+    border-bottom: 1px solid #d6d6d6;
 }
 
 img {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 .wrapper {
-  width: 960px;
-  margin: 100px auto;
+    width: 960px;
+    margin: 100px auto;
 }
 
 .col-1-2 {
-  float: left;
-  width: 50%;
+    float: left;
+    width: 50%;
 }
 
 .product-wrap {
-  margin: 0 auto;
-  width: 350px;
+    margin: 0 auto;
+    width: 350px;
 }
+
 .product-wrap .product-shot {
-  padding-top: 30px;
-  transition: all 0.5s ease;
+    padding-top: 30px;
+    transition: all 0.5s ease;
 }
+
 .product-wrap .product-shot:hover {
-  transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .product-info h2 {
-  padding-bottom: 15px;
-  font-size: 32px;
-  border-bottom: 1px solid #d9d9d9;
+    padding-bottom: 15px;
+    font-size: 32px;
+    border-bottom: 1px solid #d9d9d9;
 }
+
 .product-info .desc {
-  margin-top: 25px;
-  font-size: 16px;
-  line-height: 1.6;
+    margin-top: 25px;
+    font-size: 16px;
+    line-height: 1.6;
 }
+
 .product-info .sizing-list {
-  margin-top: 25px;
-  padding: 0px;
-  list-style-type: none;
+    margin-top: 25px;
+    padding: 0px;
+    list-style-type: none;
 }
+
 .product-info .size {
-  display: inline;
-  margin-right: 10px;
-  padding: 10px 15px;
-  color: #c2c2c2;
-  border: 1px solid #c2c2c2;
-  cursor: pointer;
+    display: inline;
+    margin-right: 10px;
+    padding: 10px 15px;
+    color: #c2c2c2;
+    border: 1px solid #c2c2c2;
+    cursor: pointer;
 }
+
 .product-info .size.active {
-  color: white;
-  background-color: #c2c2c2;
+    color: white;
+    background-color: #c2c2c2;
 }
 
 .button {
-  display: inline-block;
-  margin-top: 35px;
-  padding: 12px 25px;
-  font-size: 16px;
-  text-decoration: none;
-  background-color: #1E88E5;
-  color: white;
-  transition: 0.25s ease;
+    display: inline-block;
+    margin-top: 35px;
+    padding: 12px 25px;
+    font-size: 16px;
+    text-decoration: none;
+    background-color: #1E88E5;
+    color: white;
+    transition: 0.25s ease;
 }
 
 .button:hover {
-  background-color: #323232;
+    background-color: #323232;
+}
+
+footer {
+    height: 80px;
+    margin-top: 650px;
+    font-family: serif;
+    font-style: italic;
+    background: rgb(192, 192, 192);
+    text-align: center;
+}
+
+.footer-address {
+    display: inherit;
+    font-style: normal;
 }
