--- a/Lesson140218/css/style.css
+++ b/Lesson140218/css/style.css
@@ -1,159 +1,478 @@
 body {
-   font-family: 'Poiret One', italic;
+    font-family: 'Poiret One', italic;
+}
+
+.logo {
+    display: inline-block;
+    float: left;
+}
+
+.logo img {
+    padding: 15px 10px;
+    width: 110px;
 }
 
 .container {
-  padding-left: 15px;
-  padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .blocks-menus {
-  background: white;
-  padding: 20px 10px;
-  text-align: center;
+    background: white;
+    padding: 20px 10px;
+    text-align: center;
 }
+
 .blocks-menus .primary-menus {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
 }
+
 .blocks-menus .primary-menus i {
-  padding: 0 10px;
+    padding: 0 10px;
 }
+
 .blocks-menus .primary-menus li {
-  list-style: none;
-  float: left;
-  padding: 0 10px;
+    list-style: none;
+    float: left;
+    padding: 0 10px;
 }
+
 .blocks-menus .primary-menus li a {
-  text-decoration: none;
-  font-family: 'Poiret One', italic;
-  text-transform: uppercase;
-  font-weight: normal;
-  color: #303030;
-  font-size: 19px;
-  font-weight: 900;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
+    text-decoration: none;
+    font-family: 'Poiret One', italic;
+    text-transform: uppercase;
+    font-weight: normal;
+    color: #303030;
+    font-size: 19px;
+    font-weight: 900;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
 }
+
 .blocks-menus .primary-menus li a:hover {
-  color: #D4B062;
+    color: #D4B062;
 }
+
 .blocks-menus .menus-dropdown:hover .dropdown {
-  visibility: visible;
-  opacity: 1;
+    visibility: visible;
+    opacity: 1;
 }
+
 .blocks-menus .dropdown {
-  position: absolute;
-  opacity: 0;
-  visibility: hidden;
-  border: 1px solid #ECECEC;
-  padding: 10px 30px;
-  z-index: 999;
-  background: white;
-  width: 100%;
-  margin-top: 10px;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    border: 1px solid #ECECEC;
+    padding: 10px 30px;
+    z-index: 999;
+    background: white;
+    width: 100%;
+    margin-top: 10px;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
 }
+
 .blocks-menus .dropdown li {
-  line-height: 30px;
-  float: none;
+    line-height: 30px;
+    float: none;
 }
+
 .blocks-menus .dropdown a {
-  font-size: 11px;
-  font-weight: normal;
+    font-size: 11px;
+    font-weight: normal;
 }
+
 .blocks-menus .menus-dropdown {
-  position: relative;
+    position: relative;
 }
+
 .blocks-menus .menus-megamenus:hover .mega-menus {
-  opacity: 1;
-  visibility: visible;
+    opacity: 1;
+    visibility: visible;
 }
+
 .blocks-menus .mega-menus {
-  opacity: 0;
-  visibility: hidden;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: 15px auto;
-  width: 80%;
-  border: 1px solid #ECECEC;
-  padding: 0 15px;
-  min-height: 400px;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  background-image: url('https://images.pexels.com/photos/397998/pexels-photo-397998.jpeg');
-  background-size: 100%;
-  background-repeat: no-repeat;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 15px auto;
+    width: 80%;
+    border: 1px solid #ECECEC;
+    padding: 0 15px;
+    min-height: 400px;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    background-image: url('https://images.pexels.com/photos/397998/pexels-photo-397998.jpeg');
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
+
 .blocks-menus .mega-menus li {
-  float: none;
-  text-align: left;
-  padding: 0;
+    float: none;
+    text-align: left;
+    padding: 0;
 }
+
 .blocks-menus .section {
-  float: left;
-  margin: 35px 15px;
+    float: left;
+    margin: 35px 15px;
 }
+
 .blocks-menus .section h3 {
-  font-family: 'Poiret One', italic;
-  position: relative;
-  font-size: 26px;
-  color: #D7CCC8; 
-  padding: 10px 0;
-  text-transform:inherit;
-  border-bottom: 1px solid #d6d6d6;
+    font-family: 'Poiret One', italic;
+    position: relative;
+    font-size: 26px;
+    color: #D7CCC8;
+    padding: 10px 0;
+    text-transform: inherit;
+    border-bottom: 1px solid #d6d6d6;
 }
 
-#wrapper {
-  max-width: 940px;
-  margin: 0 auto;
-  padding: 0 5%;
+#wrap {
+    width: 90%;
+    max-width: 1600px;
+    margin: 50px auto;
 }
 
-a {
-  text-decoration: none;
+h2 {
+    font-size: 30px;
+    font-family: Raleway, sans-serif;
+    line-height: 1.5;
+    font-weight: 600;
+    margin: 0 0 80px;
 }
 
-img {
-  max-width: 100%;
+.title-sidebar {
+    float: right;
+    position: relative;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 22px;
+    color: #212121;
+    margin-bottom: 90px;
 }
 
-h3 {
-  margin: 0 0 1em 0;
+.left-sidebar {
+    position: relative;
+    float: right;
+    background: #fff;
+    width: 8px;
+    padding: 8px 0 0 15px;
+    height: 20px;
+    border-right: 1px solid #eee;
 }
 
-#gallery {
-  margin: 0;
-  padding: 0;
-  list-style:none;
+.left-sidebar h3 {
+    color: #262626;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 35px 0 10px 0;
+    letter-spacing: 1px;
+    clear: both;
 }
 
-#gallery li {
-  float: left;
-  width: 45%;
-  margin: 2.5%;
-  background-color: #FF3D00;
-  color: #bdc3c7;
-  border: 2px solid #000;
-    -moz-box-sizing: border-box; 
-    box-sizing: border-box; 
+.cart {
+    padding: 0px;
 }
 
-#gallery li:hover{
-  transform: scale(1.2);
+.cart .empty {
+    font-style: italic;
+    color: #a0a3ab;
+    font-size: 14px;
+    letter-spacing: 1px;
 }
 
-#gallery li a p {
-  float: center;
-  margin: 0;
-  padding: 5%;
-  font-size: 1.1em;
-  color: #000000;
+.checklist {
+    padding: 0;
 }
 
+.checklist ul li {
+    font-size: 14px;
+    font-weight: 400;
+    list-style: none;
+    padding: 7px 0 7px 23px;
+}
+
+.checklist li span {
+    float: left;
+    width: 11px;
+    height: 11px;
+    margin-left: -23px;
+    margin-top: 4px;
+    border: 1px solid #d1d3d7;
+    position: relative;
+}
+
+.sizes li span,
+.categories .sizes li {
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+}
+
+.checklist li a {
+    color: #676a74;
+    text-decoration: none;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+}
+
+.checklist li a:hover {
+    color: #222;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+}
+
+.checklist a:hover span {
+    border-color: #a6aab3;
+}
+
+.sizes a:hover span,
+.categories a:hover span {
+    border-color: #a6aab3;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+}
+
+.checklist a span span {
+    border: none;
+    margin: 0;
+    float: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.checklist a .x {
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #5ff7d2;
+    top: 6px;
+    left: 2px;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transition: all 50ms ease-out;
+}
+
+.checklist a .x.animate {
+    width: 4px;
+    -webkit-transition: all 100ms ease-in;
+    -moz-transition: all 100ms ease-in;
+    -ms-transition: all 100ms ease-in;
+    -o-transition: all 100ms ease-in;
+    transition: all 100ms ease-in;
+}
+
+.checklist a .y {
+    display: block;
+    width: 0px;
+    height: 2px;
+    background: #5ff7d2;
+    top: 4px;
+    left: 3px;
+    -ms-transform: rotate(13deg);
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+    -webkit-transition: all 50ms ease-out;
+}
+
+.checklist a .y.animate {
+    width: 8px;
+    -webkit-transition: all 100ms ease-out;
+    -moz-transition: all 100ms ease-out;
+    -ms-transition: all 100ms ease-out;
+    -o-transition: all 100ms ease-out;
+    transition: all 100ms ease-out;
+}
+
+.checklist .checked span {
+    border-color: #8d939f;
+}
+
+.colors ul,
+.sizes ul {
+    float: left;
+    width: 130px;
+}
+
+.colors ul li {
+    padding-left: 21px;
+}
+
+.colors a span {
+    border: none;
+    position: relative;
+    border-radius: 100%;
+    background-color: #eae3d3;
+    width: 13px;
+    height: 13px;
+    margin-left: -20px;
+}
+
+.colors a:hover span {
+    width: 15px;
+    height: 15px;
+    margin-top: 3px;
+    margin-left: -21px;
+}
+
+.columns_2 figure {
+    width: 49%;
+    margin-right: 1%;
+}
+
+.columns_2 figure:nth-child(2) {
+    margin-right: 0;
+}
+
+.columns_3 figure {
+    width: 32%;
+    margin-right: 1%;
+}
+
+.columns_3 figure:nth-child(3) {
+    margin-right: 0;
+}
+
+.columns_4 figure {
+    width: 24%;
+    margin-right: 1%;
+}
+
+.columns_4 figure:nth-child(4) {
+    margin-right: 0;
+}
+
+.columns_5 figure {
+    width: 19%;
+    margin-right: 1%;
+}
+
+.columns_5 figure:nth-child(5) {
+    margin-right: 0;
+}
+
+#columns figure:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+#columns:hover figure:not(:hover) {
+    opacity: 0.4;
+}
+
+div#columns figure {
+    display: inline-block;
+    background: #FEFEFE;
+    border: 2px solid #FAFAFA;
+    box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+    margin: 0 0px 15px;
+    -webkit-column-break-inside: avoid;
+    -moz-column-break-inside: avoid;
+    column-break-inside: avoid;
+    padding: 15px;
+    padding-bottom: 5px;
+    background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
+    opacity: 1;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
+div#columns figure img {
+    width: 100%;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 15px;
+    margin-bottom: 5px;
+}
+
+div#columns figure figcaption {
+    font-size: .9rem;
+    color: #444;
+    line-height: 1.5;
+    height: 60px;
+    font-weight: 600;
+    text-overflow: ellipsis;
+}
+
+a.button {
+    padding: 10px;
+    background: salmon;
+    margin: 10px;
+    display: block;
+    text-align: center;
+    color: #fff;
+    transition: all 1s linear;
+    text-decoration: none;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    border-bottom: 3px solid #ff6536;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+a.button:hover {
+    background: #ff6536;
+    border-bottom: 3px solid salmon;
+    color: #f1f2f3;
+}
+
+@media screen and (max-width: 960px) {
+    #columns figure {
+        width: 24%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    #columns figure {
+        width: 32%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #columns figure {
+        width: 49%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #columns figure {
+        width: 100%;
+    }
+}
+
+footer {
+    font-family: serif;
+    font-style: italic;
+    background: rgb(192, 192, 192);
+    margin-top: auto;
+    width: 100%;
+    text-align: center;
+}
+
+.footer-address {
+    display: inherit;
+    font-style: normal;
+}
